force-app/main/default/objects/pse__Missing_Timecard__c/pse__Missing_Timecard__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__MissingTimecardHelp</customHelpPage>
    <description>Indicates that a resource has not entered a timecard for a certain week. You can calculate missing timecards for a region, practice, or group and configure the criteria on which calculations are based. Missing timecards have a lookup relationship to resources.</description>
    <label>Missing Timecard</label>
    <nameField>
        <label>Missing Timecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missing Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>