force-app/main/default/objects/pse__Missing_Timecard__c/fields/pse__Date_Timecard_Entered__c.field-meta.xml
<CustomField>
    <fullName>pse__Date_Timecard_Entered__c</fullName>
    <inlineHelpText>The date and time the timecard was entered</inlineHelpText>
    <label>Date Timecard Entered</label>
    <type>DateTime</type>
</CustomField>