force-app/main/default/objects/pse__Missing_Timecard__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <inlineHelpText>The week ending date that missing timecards are checked against.</inlineHelpText>
    <label>Week End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>