force-app/main/default/objects/pse__Missing_Timecard__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <inlineHelpText>The start of the week that corresponds to the end date.</inlineHelpText>
    <label>Week Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>